--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,8 +14,9 @@ pipeline {
         }
         stage('test') {
             agent {
-                docker {
-                    image 'python:3-alpine'
+                dockerfile {
+                    filename 'Dockerfile'
+                    dir 'jenkins'
                 }
             }
             steps {
